<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>substrateunit</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <hamcrest.version>2.2</hamcrest.version>
        <junit.version>5.7.2</junit.version>
        <graalvm.version>21.2.0</graalvm.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.graalvm.compiler</groupId>
            <artifactId>compiler</artifactId>
            <version>${graalvm.version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>${hamcrest.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <compilerArgs>
                        <arg>-verbose</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.internal.vm.ci/jdk.vm.ci.services=org.example.substrateunit</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.serviceprovider=org.example.substrateunit</arg>
                        <arg>--add-modules</arg>
                        <arg>jdk.internal.vm.ci</arg>
                        <arg>--upgrade-module-path</arg>
                        <arg>${settings.localRepository}/org/graalvm/compiler/compiler/21.2.0</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <argLine>
                        -XX:+UnlockExperimentalVMOptions
                        -XX:+EnableJVMCI
                        --add-exports=jdk.internal.vm.ci/jdk.vm.ci.services=org.example.substrateunit
                        --add-exports=jdk.internal.vm.compiler/org.graalvm.compiler.serviceprovider=org.example.substrateunit
                        --upgrade-module-path ${settings.localRepository}/org/graalvm/compiler/compiler/21.2.0
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>